dada_tests/ty_parsing/perms_with_one_path/compiler-output.ref
Error: no paths are needed after the `my` permission
   ╭─[dada_tests/ty_parsing/perms_with_one_path.dada:4:28]
   │
 4 │ class List1(a: Value, v: my{a} Value)  #! ERROR no paths are needed after the `my` permission
   ·                            ─┬─  
   ·                             ╰─── here
───╯
Error: no paths are needed after the `our` permission
   ╭─[dada_tests/ty_parsing/perms_with_one_path.dada:5:29]
   │
 5 │ class List2(a: Value, v: our{a} Value)  #! ERROR no paths are needed after the `our` permission
   ·                             ─┬─  
   ·                              ╰─── here
───╯
